data/all_generated_tests/raw_wast_tests/nop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_807.wast
;; 8. **Testing Cross-Module Invocation Sequences with `nop`**:    - **Constraint Checked**: Verifies integrity of instruction sequences involving multiple module calls.    - **Description**: Define a complex function in the main module that makes calls to several imported functions sequentially, using `nop` instructions before and after each call. Validate consistency in execution flow between the two implementations.

(assert_invalid
  (module
    (import "mod1" "func1" (func $func1))
    (import "mod2" "func2" (func $func2))
    (func $main
      nop
      call $func1
      nop
      call $func2
      nop
    )
  )
  "type mismatch"
)